<resources>

    <string name="action_settings">Settings</string>
    <string name="logoImage">logoImage</string>
    <string name="loginButton">loginBy </string>
    <string name="addButton">add User</string>
    <string name="labelServer">Sunucu:</string>
    <string name="serverName">serverName</string>
    <string name="userNo">User_Telno:</string>
    <string name="editTextUser">editTextUser</string>
    <string name="userName">UserName</string>
    <string name="labelPassword">Password:</string>
    <string name="addUser">add User</string>
    <string name="title_activity_add_user">add User</string>
    <string name="title_activity_active_users">activeUsers</string>
    <string name="users">Users:</string>
    <string name="changeUser"> Change User</string>
    <string name="title_activity_home_user">homeUser</string>
    <string name="confirmTitleDelete">Delete User</string>
    <string name="confirmDeleteMessage">Do you want to delete the user?</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="userExists">User Already Exists</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">VBS</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">Calendar</string>
    <string name="title_section3">Messages</string>
    <string name="hwtitle_section1">Active</string>
    <string name="hwtitle_section2">Today</string>
    <string name="hwtitle_section3">All</string>
    <string name="index">7</string>
    <string name="hello_world">Hello world!</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_homework_main">HomeworkMainActivity</string>
    <string name="title_activity_object_inflater">objectInflater</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="menuBilgilerim">My Information</string>
    <string name="menuSifreChange">Change Password</string>
    <string name="menuChangeUser">Change User</string>
    <string name="menuSecureLogout">Secure Logout</string>
    <string name="odev">Ödev</string>
    <string name="mesaj_duyuru">Mesaj / Duyuru</string>
    <string name="etud">Etüd</string>
    <string name="yoklama">Yoklama</string>
    <string name="faaliyet">Faliyet</string>
    <string name="yemek">Yemek</string>
    <string name="sinav">Sınav</string>
    <string name="odeme">Ödeme</string>
    <string name="yazili">Yazılı</string>
    <string name="ders_programi">Ders Programı</string>
    <string name="etkinlik">Etkinlik</string>
    <string name="servis">Servis</string>
    <string name="ayarlar">Ayarlar</string>
</resources>
