<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/imageLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/logoImage"
        android:focusableInTouchMode="true"
        android:cropToPadding="true"
        android:src="@mipmap/logo_image"
        android:foregroundGravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_real"
        android:text="@string/loginButton"
        android:id="@+id/loginButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/loginButton"
        android:onClick="buttonLoginUserOnClick"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_real"
        android:text="@string/changeUser"
        android:id="@+id/changeButton"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/changeUser"
        android:onClick="buttonChangeUserOnClick"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_real"
        android:text="@string/addButton"
        android:id="@+id/addButton"
        android:layout_below="@+id/changeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="buttonAddUserOnClick"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width" />
</RelativeLayout>
